environment/dev/cfvpc.json
{
"AWSTemplateFormatVersion": "2010-09-09",
    "Description": "This is my first cloudformation template",
    "Metadata": {
        "About": {
            "Author": "V reddy",
            "email": "vreddy@tekleaders"
        }
    },
    "Parameters": {
    
    },
    "Mappings": {
        "CustomVariables": {
            "EnvironmementName": {"Value": "Integration"},
            "VPCCidrBlock": {"Value": "10.20.0.0/16"},
            "Subnet1": {"Value": "10.20.0.0/24"},
            "Subnet2": {"Value": "10.20.1.0/24"},
            "Subnet3": {"Value": "10.20.2.0/24"},
            "Subnet4": {"Value": "10.20.3.0/24"},
            "AvailabilityZone1": {"Value": "us-west-1a"},
            "AvailabilityZone2": {"Value": "us-west-1c"}
        }

    },
    "Conditions": {

    },
    "Resources": {
        "VPC": {
            "Type" : "AWS::EC2::VPC",
            "Properties" : {
                "CidrBlock" : { "Fn::FindInMap" : [ "CustomVariables", "VPCCidrBlock", "Value"] },
                "EnableDnsHostnames" : "true",
                "EnableDnsSupport" : "true",
                "InstanceTenancy" : "default",
                "Tags": [
                    {"Key": "Name", "Value": { "Fn::FindInMap" : [ "CustomVariables", "EnvironmementName", "Value"] }}
                ]
            }
        },
        "Subnet1": {
            "Type" : "AWS::EC2::Subnet",
            "Properties" : {
                "AvailabilityZone" : { "Fn::FindInMap" : [ "CustomVariables", "AvailabilityZone1", "Value"] },
                "CidrBlock" : { "Fn::FindInMap" : [ "CustomVariables", "Subnet1", "Value"] },
                "VpcId" : {"Ref": "VPC"},
                "Tags" : [
                    {"Key": "Name", "Value": {"Fn::Join": ["-",[{ "Fn::FindInMap" : [ "CustomVariables", "EnvironmementName", "Value"] },"PublicSubnet1"]]}},
                    {"Key": "Network", "Value": "PublicNetwork"}
                ]
              }
          },
          "Subnet2": {
            "Type" : "AWS::EC2::Subnet",
            "Properties" : {
                "AvailabilityZone" : { "Fn::FindInMap" : [ "CustomVariables", "AvailabilityZone2", "Value"] },
                "CidrBlock" : { "Fn::FindInMap" : [ "CustomVariables", "Subnet2", "Value"] },
                "VpcId" : {"Ref": "VPC"},
                "Tags" : [
                    {"Key": "Name", "Value": {"Fn::Join": ["-",[{ "Fn::FindInMap" : [ "CustomVariables", "EnvironmementName", "Value"] },"PublicSubnet2"]]}},
                    {"Key": "Network", "Value": "PublicNetwork"}
                ]
              }
          },
          "Subnet3": {
            "Type" : "AWS::EC2::Subnet",
            "Properties" : {
                "AvailabilityZone" : { "Fn::FindInMap" : [ "CustomVariables", "AvailabilityZone1", "Value"] },
                "CidrBlock" : { "Fn::FindInMap" : [ "CustomVariables", "Subnet3", "Value"] },
                "VpcId" : {"Ref": "VPC"},
                "Tags" : [
                    {"Key": "Name", "Value": {"Fn::Join": ["-",[{ "Fn::FindInMap" : [ "CustomVariables", "EnvironmementName", "Value"] },"PrivateSubnet1"]]}},
                    {"Key": "Network", "Value": "PrivateNetwork"}
                ]
              }
          },
          "Subnet4": {
            "Type" : "AWS::EC2::Subnet",
            "Properties" : {
                "AvailabilityZone" : { "Fn::FindInMap" : [ "CustomVariables", "AvailabilityZone2", "Value"] },
                "CidrBlock" : { "Fn::FindInMap" : [ "CustomVariables", "Subnet4", "Value"] },
                "VpcId" : {"Ref": "VPC"},
                "Tags" : [
                    {"Key": "Name", "Value": {"Fn::Join": ["-",[{ "Fn::FindInMap" : [ "CustomVariables", "EnvironmementName", "Value"] },"PrivateSubnet2"]]}},
                    {"Key": "Network", "Value": "PrivateNetwork"}
                ]
              }
          },
          "Gateway2Internet": {
            "Type" : "AWS::EC2::InternetGateway",
            "Properties" : {
                "Tags" : [
                    {"Key": "Name", "Value": {"Fn::Join": ["-",[{ "Fn::FindInMap" : [ "CustomVariables", "EnvironmementName", "Value"] },"IGW"]]}}
                ]
              }
          },
          "AttachInternetGateway": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Metadata": {
              "Comment": "Attach the Internet Gateway created to the Main VPC"
            },
            "Properties": {
              "VpcId": {"Ref": "VPC"},
              "InternetGatewayId": { "Ref": "Gateway2Internet" }
            }
          },
          "Route1": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
              "VpcId": { "Ref": "VPC"},
              "Tags": [
                  {"Key": "Environment", "Value": { "Fn::FindInMap" : [ "CustomVariables", "EnvironmementName", "Value"] }},
                  {"Key": "Role", "Value":"public-network"},
                  {"Key": "Name", "Value": { "Fn::Join": ["",["Route1","-",{ "Fn::FindInMap" : [ "CustomVariables", "EnvironmementName", "Value"] }]]}}
               ]
            }
          },
          "InternetGatewayRoute": {
            "Type": "AWS::EC2::Route",
            "DependsOn": "AttachInternetGateway",
            "Properties": {
              "RouteTableId": {"Ref": "Route1"},
              "DestinationCidrBlock": "0.0.0.0/0",
              "GatewayId": { "Ref": "Gateway2Internet" }
            }
          },
          "RouteTableAssociationPublic1": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
              "SubnetId": {"Ref": "Subnet1"},
              "RouteTableId": {"Ref": "Route1"}
            }
          },
   
          "RouteTableAssociationPublic2": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
              "SubnetId": {"Ref": "Subnet2"},
              "RouteTableId": {"Ref": "Route1"}
            }
          },
          "Route2": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
              "VpcId": { "Ref": "VPC"},
              "Tags": [
                  {"Key": "Environment", "Value": { "Fn::FindInMap" : [ "CustomVariables", "EnvironmementName", "Value"] }},
                  {"Key": "Role", "Value":"public-network"},
                  {"Key": "Name", "Value": { "Fn::Join": ["",["Route2","-",{ "Fn::FindInMap" : [ "CustomVariables", "EnvironmementName", "Value"] }]]}}
               ]
            }
          },
          "NATGateway": {
            "DependsOn": "AttachInternetGateway",
            "Type": "AWS::EC2::NatGateway",
            "Metadata":{
              "Comment": "Creates NAT Gateway to enable isntances in private subnet to connect to internet or other AWS services"
                      },
            "Properties": {
              "AllocationId": {"Fn::GetAtt" : ["EIP1A", "AllocationId"]},
              "SubnetId": {"Ref" : "Subnet1"}
            }
          },
          "EIP1A": {
            "Type": "AWS::EC2::EIP",
            "Properties": {
              "Domain": { "Fn::FindInMap" : [ "CustomVariables", "EnvironmementName", "Value"] }
            }
          },
          "NatGatewayRoute": {
            "Type": "AWS::EC2::Route",
            "DependsOn": "AttachInternetGateway",
            "Properties": {
              "RouteTableId": {"Ref": "Route2"},
              "DestinationCidrBlock": "0.0.0.0/0",
              "NatGatewayId": { "Ref": "NATGateway" }
            }
          },
          "RouteTableAssociationPrivate1": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
              "SubnetId": {"Ref": "Subnet3"},
              "RouteTableId": {"Ref": "Route2"}
            }
          },
   
          "RouteTableAssociationPrivate2": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
              "SubnetId": {"Ref": "Subnet4"},
              "RouteTableId": {"Ref": "Route2"}
            }
          }

    },
    "Outputs": {

      "VPC": {
        "Description": "VPC ID ",
        "Value": {"Ref": "VPC"},
        "Export": {"Name": { "Fn::Join": ["",[{ "Fn::FindInMap" : [ "CustomVariables", "EnvironmementName", "Value"] },"-","VPC-ID"]]}}
      },
      "VpcCidr":{
        "Description": "VPC Cidr Block ",
        "Value": {"Fn::GetAtt": [ "VPC" ,"CidrBlock"]},
        "Export": {"Name": { "Fn::Join": ["",[{ "Fn::FindInMap" : [ "CustomVariables", "EnvironmementName", "Value"] },"-","CidrBlock"]]}}
      },
      "Route1": {
        "Description": "Route Connected to InternetGateway",
        "Value": {"Ref": "Route1"},
        "Export": {"Name": { "Fn::Join": ["",[{ "Fn::FindInMap" : [ "CustomVariables", "EnvironmementName", "Value"] },"-","RouteTable1-ID"]]}}
      },
      "NatEIP1A": {
        "Description": "NatGateway Connected Elastic IP",
        "Value": { "Fn::Join": ["",[{"Ref":"EIP1A"},"/","32"]]},
        "Export": {"Name": { "Fn::Join": ["",[{ "Fn::FindInMap" : [ "CustomVariables", "EnvironmementName", "Value"] },"-","NAT-EIP-2A"]]}}
      },
      "Route2": {
        "Description": "Route Connected to NAT Gateway",
        "Value": {"Ref": "Route2"},
        "Export": {"Name": { "Fn::Join": ["",[{ "Fn::FindInMap" : [ "CustomVariables", "EnvironmementName", "Value"] },"-","RouteTable2-ID"]]}}
      },
      "PublicSubnet1":{
        "Description": "Subnet Connected to IGW",
        "Value": {"Ref": "Subnet1"},
        "Export": {"Name": { "Fn::Join": ["",[{ "Fn::FindInMap" : [ "CustomVariables", "EnvironmementName", "Value"] },"-","PubSubnet1-ID"]]}}
      },
      "PublicSubnet2":{
        "Description": "Subnet Connected to IGW",
        "Value": {"Ref": "Subnet2"},
        "Export": {"Name": { "Fn::Join": ["",[{ "Fn::FindInMap" : [ "CustomVariables", "EnvironmementName", "Value"] },"-","PubSubnet2-ID"]]}}
      },
      "PrivateSubnet1":{
        "Description": "Subnet Connected to Natgateway",
        "Value": {"Ref": "Subnet3"},
        "Export": {"Name": { "Fn::Join": ["",[{ "Fn::FindInMap" : [ "CustomVariables", "EnvironmementName", "Value"] },"-","PvtSubnet1-ID"]]}}
      },
      "PrivateSubnet2":{
        "Description": "Subnet Connected to Natgateway",
        "Value": {"Ref": "Subnet4"},
        "Export": {"Name": { "Fn::Join": ["",[{ "Fn::FindInMap" : [ "CustomVariables", "EnvironmementName", "Value"] },"-","PvtSubnet2-ID"]]}}
      }
    }
}
